--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-final-project-group4-back-end",
+  "name": "kapusta-backend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
